--- a/style.css
+++ b/style.css
@@ -67,3 +67,87 @@
     width: 60px;
     height: 20px;
 }
+
+/* ESERCIZIO 1 */
+.ex-1-square {
+  transition: background 4s;
+}
+.ex-1-square:hover {
+  background: red;
+}
+
+/* ESERCIZIO 2 */
+.ex-2-square {
+  transition: 4s;
+}
+.ex-2-square:hover {
+  width: 50%;
+}
+
+/* ESERCIZIO 3 */
+.ex-3-square {
+  transition: 4s;
+}
+.ex-3-square:hover {
+  border-radius: 50%;
+}
+
+/* ESERCIZIO 4 */
+.ex-4-square {
+  transition: 4s;
+}
+.ex-4-square:hover {
+  opacity: 0;
+}
+
+/* ESERCIZIO 5 */
+.ex-5-square {
+  transition: 2s;
+}
+.ex-5-square:hover {
+  transform: scale(2);
+}
+.ex-5-square:active {
+  transform: scale(0.6);
+}
+
+/* ESERCIZIO 6 */
+.ex-6-img:hover {
+  filter: grayscale(2);
+}
+
+/* ESERCIZIO 7 */
+.ex-7-img {
+  transition: 2s;
+}
+.ex-7-img:hover {
+  filter: grayscale(0.3) invert(0.9);
+}
+
+/* ESERCIZIO 8 */
+.ex-8-img {
+  transition: 1s;
+}
+.ex-8-img:hover {
+  filter: sepia(1) brightness(2);
+  border-radius: 15px;
+}
+
+/* ESERCIZIO 9 */
+.ex-9-img {
+  transition: 3s;
+}
+.ex-9-img:hover {
+  filter: sepia(1) invert(2);
+  border-radius: 15px;
+  transform: scale(1.5);
+}
+/* ESERCIZIO 10 */
+@keyframes rotate {
+  0% {
+    transform: rotate(360deg);
+  }
+}
+.ex-10-icon:hover {
+  animation: rotate 1s infinite;
+}
